// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notie /> confirm Custom button text 1`] = `
<Notie
  position="top"
  ttl={5000}
>
  <div
    className="react-notie react-notie--top react-notie-level--info"
  >
    <div
      className="react-notie-container"
    >
      <div
        className="react-notie-message"
      />
      <div
        className="react-notie-dismiss"
        onClick={[Function]}
      />
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> confirm click no 1`] = `
<Notie
  position="top"
  ttl={5000}
>
  <div
    className="react-notie react-notie--top react-notie-level--confirm"
  >
    <div
      className="react-notie-container"
    >
      <div
        className="react-notie-message"
      >
        Are you sure?
      </div>
      <div
        className="react-notie-choices"
      >
        <div
          className="react-notie-choice react-notie-choice--yes"
          onClick={[Function]}
        >
          Yes
        </div>
        <div
          className="react-notie-choice react-notie-choice--no"
          onClick={[Function]}
        >
          No
        </div>
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> confirm click yes 1`] = `
<Notie
  position="top"
  ttl={5000}
>
  <div
    className="react-notie react-notie--top react-notie-level--confirm"
  >
    <div
      className="react-notie-container"
    >
      <div
        className="react-notie-message"
      >
        Are you sure?
      </div>
      <div
        className="react-notie-choices"
      >
        <div
          className="react-notie-choice react-notie-choice--yes"
          onClick={[Function]}
        >
          Yes
        </div>
        <div
          className="react-notie-choice react-notie-choice--no"
          onClick={[Function]}
        >
          No
        </div>
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> confirm initial render 1`] = `
.glamor-1,
[data-glamor-1] {
  padding: 20px;
}

.glamor-5,
[data-glamor-5] {
  position: fixed;
  width: 100%;
  text-align: center;
  font-size: 14px;
  color: #fff;
  transition: -webkit-transform 0.3s ease-in-out,transform 0.3s ease-in-out;
  margin: 0 auto;
  white-space: nowrap;
  text-overflow: ellipsis;
  left: 0;
  pointer-events: auto;
  top: 0;
  bottom: auto;
  transform: translate(0, 0);
  background-color: #20a0ff;
  -webkit-transition: -webkit-transform 0.3s ease-in-out,transform 0.3s ease-in-out;
  -moz-transition: transform 0.3s ease-in-out;
  -webkit-transform: translate(0, 0);
}

.glamor-0,
[data-glamor-0] {
  position: fixed;
  min-height: 100vh;
  height: 100%;
  top: 0px;
  left: 0px;
  width: 100%;
  background-color: rgba(255, 255, 255, 0.65);
}

.glamor-4,
[data-glamor-4] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  width: 100%;
}

.glamor-2,
[data-glamor-2] {
  padding: 20px;
  flex-grow: 1;
  border: none;
  text-align: center;
  cursor: pointer;
  background-color: #13ce66;
  -webkit-flex-grow: 1;
}

.glamor-3,
[data-glamor-3] {
  padding: 20px;
  flex-grow: 1;
  border: none;
  text-align: center;
  cursor: pointer;
  background-color: #ff4949;
  -webkit-flex-grow: 1;
}

<Notie>
  <div>
    <NotieOverlay>
      <div
        className="glamor-0"
      />
    </NotieOverlay>
    <NotieContainer
      active={true}
      level="CONFIRM"
      onClick={[Function]}
      position="top"
    >
      <div
        className="glamor-5"
        onClick={[Function]}
      >
        <NotieMessage>
          <div
            className="glamor-1"
          >
            Are you sure?
          </div>
        </NotieMessage>
        <NotieChoices>
          <div
            className="glamor-4"
          >
            <NotieButton
              level="SUCCESS"
              onClick={[Function]}
            >
              <button
                className="glamor-2"
                onClick={[Function]}
              >
                OK
              </button>
            </NotieButton>
            <NotieButton
              level="ERROR"
              onClick={[Function]}
            >
              <button
                className="glamor-3"
                onClick={[Function]}
              >
                Cancel
              </button>
            </NotieButton>
          </div>
        </NotieChoices>
      </div>
    </NotieContainer>
  </div>
</Notie>
`;

exports[`<Notie /> confirm no consecutive calls 1`] = `
<Notie
  position="top"
  ttl={5000}
>
  <div
    className="react-notie react-notie--top react-notie-level--confirm react-notie--active"
  >
    <div
      className="react-notie-overlay"
    />
    <div
      className="react-notie-container"
    >
      <div
        className="react-notie-message"
      >
        Are you sure?
      </div>
      <div
        className="react-notie-choices"
      >
        <div
          className="react-notie-choice react-notie-choice--yes"
          onClick={[Function]}
        >
          Yes
        </div>
        <div
          className="react-notie-choice react-notie-choice--no"
          onClick={[Function]}
        >
          No
        </div>
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> confirm no consecutive calls 2`] = `
<Notie
  position="top"
  ttl={5000}
>
  <div
    className="react-notie react-notie--top react-notie-level--confirm react-notie--active"
  >
    <div
      className="react-notie-overlay"
    />
    <div
      className="react-notie-container"
    >
      <div
        className="react-notie-message"
      >
        Are you sure?
      </div>
      <div
        className="react-notie-choices"
      >
        <div
          className="react-notie-choice react-notie-choice--yes"
          onClick={[Function]}
        >
          Yes
        </div>
        <div
          className="react-notie-choice react-notie-choice--no"
          onClick={[Function]}
        >
          No
        </div>
      </div>
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> consecutive calls 1`] = `
<Notie
  position="top"
  ttl={5000}
>
  <div
    className="react-notie react-notie--top react-notie-level--info react-notie--active"
  >
    <div
      className="react-notie-container"
    >
      <div
        className="react-notie-message"
      >
        Info!
      </div>
      <div
        className="react-notie-dismiss"
        onClick={[Function]}
      />
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> consecutive calls 2`] = `
<Notie
  position="top"
  ttl={5000}
>
  <div
    className="react-notie react-notie--top react-notie-level--error react-notie--active"
  >
    <div
      className="react-notie-container"
    >
      <div
        className="react-notie-message"
      >
        Error!
      </div>
      <div
        className="react-notie-dismiss"
        onClick={[Function]}
      />
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> dismiss click 1`] = `
.glamor-0,
[data-glamor-0] {
  padding: 20px;
}

.glamor-1,
[data-glamor-1] {
  position: fixed;
  width: 100%;
  text-align: center;
  font-size: 14px;
  color: #fff;
  transition: -webkit-transform 0.3s ease-in-out,transform 0.3s ease-in-out;
  margin: 0 auto;
  white-space: nowrap;
  text-overflow: ellipsis;
  left: 0;
  pointer-events: auto;
  top: 0;
  bottom: auto;
  transform: translate(0, 0);
  background-color: #20a0ff;
  -webkit-transition: -webkit-transform 0.3s ease-in-out,transform 0.3s ease-in-out;
  -moz-transition: transform 0.3s ease-in-out;
  -webkit-transform: translate(0, 0);
}

<Notie>
  <div>
    <NotieContainer
      active={true}
      level="INFO"
      onClick={[Function]}
      position="top"
    >
      <div
        className="glamor-1"
        onClick={[Function]}
      >
        <NotieMessage>
          <div
            className="glamor-0"
          >
            Info!
          </div>
        </NotieMessage>
      </div>
    </NotieContainer>
  </div>
</Notie>
`;

exports[`<Notie /> dismiss click 2`] = `
.glamor-1,
[data-glamor-1] {
  position: fixed;
  width: 100%;
  text-align: center;
  font-size: 14px;
  color: #fff;
  transition: -webkit-transform 0.3s ease-in-out,transform 0.3s ease-in-out;
  margin: 0 auto;
  white-space: nowrap;
  text-overflow: ellipsis;
  left: 0;
  pointer-events: none;
  top: 0;
  bottom: auto;
  transform: translate(0, -106%);
  background-color: #20a0ff;
  -webkit-transition: -webkit-transform 0.3s ease-in-out,transform 0.3s ease-in-out;
  -moz-transition: transform 0.3s ease-in-out;
  -webkit-transform: translate(0, -106%);
}

.glamor-0,
[data-glamor-0] {
  padding: 20px;
}

<Notie>
  <div>
    <NotieContainer
      active={false}
      level="INFO"
      onClick={[Function]}
      position="top"
    >
      <div
        className="glamor-1"
        onClick={[Function]}
      >
        <NotieMessage>
          <div
            className="glamor-0"
          >
            Info!
          </div>
        </NotieMessage>
      </div>
    </NotieContainer>
  </div>
</Notie>
`;

exports[`<Notie /> error message 1`] = `
.glamor-0,
[data-glamor-0] {
  padding: 20px;
}

.glamor-1,
[data-glamor-1] {
  position: fixed;
  width: 100%;
  text-align: center;
  font-size: 14px;
  color: #fff;
  transition: -webkit-transform 0.3s ease-in-out,transform 0.3s ease-in-out;
  margin: 0 auto;
  white-space: nowrap;
  text-overflow: ellipsis;
  left: 0;
  pointer-events: auto;
  top: 0;
  bottom: auto;
  transform: translate(0, 0);
  background-color: #ff4949;
  -webkit-transition: -webkit-transform 0.3s ease-in-out,transform 0.3s ease-in-out;
  -moz-transition: transform 0.3s ease-in-out;
  -webkit-transform: translate(0, 0);
}

<Notie>
  <div>
    <NotieContainer
      active={true}
      level="ERROR"
      onClick={[Function]}
      position="top"
    >
      <div
        className="glamor-1"
        onClick={[Function]}
      >
        <NotieMessage>
          <div
            className="glamor-0"
          >
            Error!
          </div>
        </NotieMessage>
      </div>
    </NotieContainer>
  </div>
</Notie>
`;

exports[`<Notie /> error message 2`] = `
.glamor-0,
[data-glamor-0] {
  padding: 20px;
}

.glamor-1,
[data-glamor-1] {
  position: fixed;
  width: 100%;
  text-align: center;
  font-size: 14px;
  color: #fff;
  transition: -webkit-transform 0.3s ease-in-out,transform 0.3s ease-in-out;
  margin: 0 auto;
  white-space: nowrap;
  text-overflow: ellipsis;
  left: 0;
  pointer-events: none;
  top: 0;
  bottom: auto;
  transform: translate(0, -106%);
  background-color: #ff4949;
  -webkit-transition: -webkit-transform 0.3s ease-in-out,transform 0.3s ease-in-out;
  -moz-transition: transform 0.3s ease-in-out;
  -webkit-transform: translate(0, -106%);
}

<Notie>
  <div>
    <NotieContainer
      active={false}
      level="ERROR"
      onClick={[Function]}
      position="top"
    >
      <div
        className="glamor-1"
        onClick={[Function]}
      >
        <NotieMessage>
          <div
            className="glamor-0"
          >
            Error!
          </div>
        </NotieMessage>
      </div>
    </NotieContainer>
  </div>
</Notie>
`;

exports[`<Notie /> info message 1`] = `
.glamor-0,
[data-glamor-0] {
  padding: 20px;
}

.glamor-1,
[data-glamor-1] {
  position: fixed;
  width: 100%;
  text-align: center;
  font-size: 14px;
  color: #fff;
  transition: -webkit-transform 0.3s ease-in-out,transform 0.3s ease-in-out;
  margin: 0 auto;
  white-space: nowrap;
  text-overflow: ellipsis;
  left: 0;
  pointer-events: auto;
  top: 0;
  bottom: auto;
  transform: translate(0, 0);
  background-color: #20a0ff;
  -webkit-transition: -webkit-transform 0.3s ease-in-out,transform 0.3s ease-in-out;
  -moz-transition: transform 0.3s ease-in-out;
  -webkit-transform: translate(0, 0);
}

<Notie>
  <div>
    <NotieContainer
      active={true}
      level="INFO"
      onClick={[Function]}
      position="top"
    >
      <div
        className="glamor-1"
        onClick={[Function]}
      >
        <NotieMessage>
          <div
            className="glamor-0"
          >
            Info!
          </div>
        </NotieMessage>
      </div>
    </NotieContainer>
  </div>
</Notie>
`;

exports[`<Notie /> info message 2`] = `
.glamor-1,
[data-glamor-1] {
  position: fixed;
  width: 100%;
  text-align: center;
  font-size: 14px;
  color: #fff;
  transition: -webkit-transform 0.3s ease-in-out,transform 0.3s ease-in-out;
  margin: 0 auto;
  white-space: nowrap;
  text-overflow: ellipsis;
  left: 0;
  pointer-events: none;
  top: 0;
  bottom: auto;
  transform: translate(0, -106%);
  background-color: #20a0ff;
  -webkit-transition: -webkit-transform 0.3s ease-in-out,transform 0.3s ease-in-out;
  -moz-transition: transform 0.3s ease-in-out;
  -webkit-transform: translate(0, -106%);
}

.glamor-0,
[data-glamor-0] {
  padding: 20px;
}

<Notie>
  <div>
    <NotieContainer
      active={false}
      level="INFO"
      onClick={[Function]}
      position="top"
    >
      <div
        className="glamor-1"
        onClick={[Function]}
      >
        <NotieMessage>
          <div
            className="glamor-0"
          >
            Info!
          </div>
        </NotieMessage>
      </div>
    </NotieContainer>
  </div>
</Notie>
`;

exports[`<Notie /> initial render 1`] = `
<Notie
  position="top"
  ttl={5000}
>
  <div
    className="react-notie react-notie--top react-notie-level--info"
  >
    <div
      className="react-notie-container"
    >
      <div
        className="react-notie-message"
      />
      <div
        className="react-notie-dismiss"
        onClick={[Function]}
      />
    </div>
  </div>
</Notie>
`;

exports[`<Notie /> success message 1`] = `
.glamor-0,
[data-glamor-0] {
  padding: 20px;
}

.glamor-1,
[data-glamor-1] {
  position: fixed;
  width: 100%;
  text-align: center;
  font-size: 14px;
  color: #fff;
  transition: -webkit-transform 0.3s ease-in-out,transform 0.3s ease-in-out;
  margin: 0 auto;
  white-space: nowrap;
  text-overflow: ellipsis;
  left: 0;
  pointer-events: auto;
  top: 0;
  bottom: auto;
  transform: translate(0, 0);
  background-color: #13ce66;
  -webkit-transition: -webkit-transform 0.3s ease-in-out,transform 0.3s ease-in-out;
  -moz-transition: transform 0.3s ease-in-out;
  -webkit-transform: translate(0, 0);
}

<Notie>
  <div>
    <NotieContainer
      active={true}
      level="SUCCESS"
      onClick={[Function]}
      position="top"
    >
      <div
        className="glamor-1"
        onClick={[Function]}
      >
        <NotieMessage>
          <div
            className="glamor-0"
          >
            Success!
          </div>
        </NotieMessage>
      </div>
    </NotieContainer>
  </div>
</Notie>
`;

exports[`<Notie /> success message 2`] = `
.glamor-0,
[data-glamor-0] {
  padding: 20px;
}

.glamor-1,
[data-glamor-1] {
  position: fixed;
  width: 100%;
  text-align: center;
  font-size: 14px;
  color: #fff;
  transition: -webkit-transform 0.3s ease-in-out,transform 0.3s ease-in-out;
  margin: 0 auto;
  white-space: nowrap;
  text-overflow: ellipsis;
  left: 0;
  pointer-events: none;
  top: 0;
  bottom: auto;
  transform: translate(0, -106%);
  background-color: #13ce66;
  -webkit-transition: -webkit-transform 0.3s ease-in-out,transform 0.3s ease-in-out;
  -moz-transition: transform 0.3s ease-in-out;
  -webkit-transform: translate(0, -106%);
}

<Notie>
  <div>
    <NotieContainer
      active={false}
      level="SUCCESS"
      onClick={[Function]}
      position="top"
    >
      <div
        className="glamor-1"
        onClick={[Function]}
      >
        <NotieMessage>
          <div
            className="glamor-0"
          >
            Success!
          </div>
        </NotieMessage>
      </div>
    </NotieContainer>
  </div>
</Notie>
`;

exports[`<Notie /> warn message 1`] = `
.glamor-0,
[data-glamor-0] {
  padding: 20px;
}

.glamor-1,
[data-glamor-1] {
  position: fixed;
  width: 100%;
  text-align: center;
  font-size: 14px;
  color: #fff;
  transition: -webkit-transform 0.3s ease-in-out,transform 0.3s ease-in-out;
  margin: 0 auto;
  white-space: nowrap;
  text-overflow: ellipsis;
  left: 0;
  pointer-events: auto;
  top: 0;
  bottom: auto;
  transform: translate(0, 0);
  background-color: #f5be4b;
  -webkit-transition: -webkit-transform 0.3s ease-in-out,transform 0.3s ease-in-out;
  -moz-transition: transform 0.3s ease-in-out;
  -webkit-transform: translate(0, 0);
}

<Notie>
  <div>
    <NotieContainer
      active={true}
      level="WARN"
      onClick={[Function]}
      position="top"
    >
      <div
        className="glamor-1"
        onClick={[Function]}
      >
        <NotieMessage>
          <div
            className="glamor-0"
          >
            Warn!
          </div>
        </NotieMessage>
      </div>
    </NotieContainer>
  </div>
</Notie>
`;

exports[`<Notie /> warn message 2`] = `
.glamor-0,
[data-glamor-0] {
  padding: 20px;
}

.glamor-1,
[data-glamor-1] {
  position: fixed;
  width: 100%;
  text-align: center;
  font-size: 14px;
  color: #fff;
  transition: -webkit-transform 0.3s ease-in-out,transform 0.3s ease-in-out;
  margin: 0 auto;
  white-space: nowrap;
  text-overflow: ellipsis;
  left: 0;
  pointer-events: none;
  top: 0;
  bottom: auto;
  transform: translate(0, -106%);
  background-color: #f5be4b;
  -webkit-transition: -webkit-transform 0.3s ease-in-out,transform 0.3s ease-in-out;
  -moz-transition: transform 0.3s ease-in-out;
  -webkit-transform: translate(0, -106%);
}

<Notie>
  <div>
    <NotieContainer
      active={false}
      level="WARN"
      onClick={[Function]}
      position="top"
    >
      <div
        className="glamor-1"
        onClick={[Function]}
      >
        <NotieMessage>
          <div
            className="glamor-0"
          >
            Warn!
          </div>
        </NotieMessage>
      </div>
    </NotieContainer>
  </div>
</Notie>
`;
